<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AOSP Browser Installer</string>
    <string name="action_settings">Settings</string>
    
    <string name="installator">Installator</string>
    <string name="uninstallator">Uninstallator</string>
    <string name="installed">AOSP Browser is installed</string>
    <string name="with_sync">%s (with ChromeSync)</string>
    <string name="notinstalled">AOSP Browser is not installed.</string>
    
    <string name="warning">Warning!</string>
    <string name="noroot">"Device not Rooted. Please Root it. More information under xda-developer.com"</string>
    <string name="notsupported">Device not supported by developer.\nIf you want to continue, doing so at your own risk. </string>
    
    <string name="already">AOSP Browser already installed.\nPlease uninstall it first</string>
    <string name="notalready">AOSP Browser is not installed.\nPlease install it first</string>
    <string name="empty"></string>
    <string name="addsync">Would you like to add Sync?</string>
    <string name="positive">Yes, please</string>
	<string name="neutral">No, thanks</string>
	<string name="negative">Cancel</string>
	<string name="option">Option</string>
	<string name="loading">Loading</string>
	
	<string name="mount">Mounting /system as RW</string>
	<string name="unmount">Mounting /system as RO</string>
	
	<string name="backup">Backup unneeded Apks and Odexs as .old</string>
	<string name="restore">Restoring Apks and Odexs from .old</string>
	<string name="clean">Deleting unneeded files</string>
	
	<string name="install">Install</string>
	<string name="installing">Installing</string>
	<string name="unpackbrowser">Unpacking Browser.apk</string>
	<string name="unpacksync">Unpacking ChromeBookmarksSyncAdapter.apk</string>
	<string name="pushbrowser">Pushing AOSP Browser in to SystemApps directory</string>
	<string name="pushsync">Pushing ChromeSync in to SystemApps directory</string>
	<string name="setpermissions">Setting permissions to 644</string>
	<string name="uninstall">Uninstall</string>
	<string name="uninstalling">Uninstalling</string>
	<string name="deleteaosp">Deleting AOSP Browser from SystemApps directory</string>
	<string name="deletesync">Deleting ChromeSync from SystemApps directory</string>
	
	<string name="checking">Checking system.....</string>
	<string name="information">Information</string>
	<string name="completeinstallation">You must Reboot to complete your installation.\nReboot now?</string>
	<string name="completeuninstallation">You must Reboot to complete your uninstallation.\nReboot now?</string>
	
	<string name="iconinstalled">The AOSP Browser is installed :)</string>
	<string name="iconuninstalled">The AOSP Browser is uninstalled :(</string>
    
</resources>