<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AOSPBrowserInstaller" >

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/pbInstallation"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvInfo" />

    <Button
        android:id="@+id/bUninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bInstall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:clickable="false"
        android:onClick="uninstall"
        android:text="@string/uninstall" />

    <ImageView
        android:id="@+id/ivIconInstalled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbInstallation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/iconinstalled"
        android:src="@drawable/ic_launcher_browser"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivIconInstalled"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:onClick="install"
        android:text="@string/install" />

    <ImageView
        android:id="@+id/ivIconUninstalled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivIconInstalled"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/iconuninstalled"
        android:src="@drawable/ic_launcher_browserun"
        android:visibility="invisible" />

</RelativeLayout>